namespace gRPCStressTestingService.DTOs.Models.DataRequestModel
{
    public class DataRequestModel
    {

        public string RequestId { get; set; }
        public string RequestType { get; set; }
        public string RequestTimestamp { get; set; }
        public string DataSize { get; set; }

    }
}
